syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/spv-dev/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message ChatInfo {
    repeated string usernames = 1;
}

message Chat {
    int64 id = 1;
    ChatInfo info = 2;
}

message MessageInfo {
    string from = 1;
    string text = 2;
}

message Message {
    MessageInfo info = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message CreateRequest {
    ChatInfo info = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendMessageRequest {
    Message message = 1;
}




